--- a/gradle/code-analysis.gradle
+++ b/gradle/code-analysis.gradle
@@ -15,7 +15,7 @@ sonarqube {
     properties {
         property 'sonar.host.url', 'https://sonarcloud.io'
         property 'sonar.projectKey', System.getenv('SONAR_PROJECT_KEY')
-        property 'sonar.organization', 'tbu-jenkins'
+        property 'sonar.organization', 'jenkins'
         property 'sonar.login', System.getenv('SONAR_LOGIN')
         properties['sonar.tests'] += sourceSets.integrationTest.java.srcDirs + "test"
     }
